# PyMOODENG

./: README.md  bolygo1.m  pyproject.toml  readthedocs.yaml  requirements.txt  setup.py
docs/: requirements.txt
docs/source/: README.rst  conf.py  example_code.rst  features.rst  index.rst
pymoodeng/: constants.py  objects.py  orbital_conversions.py
pymoodeng.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
pymoodeng/pymoodeng.egg-info/: SOURCES.txt
src/: anomaly.py  constants.py  core.py  manuvers.py  manuvers_py  objects.py  operations.py  orbital+conversions,py  orbital+conversions.py  plotting.py  szenveding.py
src/pymoodeng/: __init__.py  anomaly.py  constants.py  core.py  display.py  manuvers.py  objects.py  orbital_conversions.py  plotting.py
src/pymoodeng.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: anomalytest.py  manuverstest.py  orbital_conversionstest.py  verytesting.ipynb
