[project]
name = "Monitoring Orbitals Of Dynamic Environments, Navigating Galaxies"
version = "0.0.1"
authors = [
  { name="Tari Zalán", email="author@example.com" },
  { name="Varga Benedek", email="author@example.com" },
  { name="Kiss Márkus", email="kiss.markus@hallgato.ppjke.hu" }
]
description = "A Python package for simple system simulations and potential transition fuel calculations."
readme = "README.md"
requires-python = ">=3.12.7"
classifiers = [
    "Programming Language :: Python :: 3.12.7",
    "Operating System :: OS Independent",
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://github.com/tarza17/PyMOODENG"
Issues = "https://github.com/tarza17/PyMOODENG/issues"

[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"